--- a/item-pages/Pizza Menu.html
+++ b/item-pages/Pizza Menu.html
@@ -70,7 +70,8 @@
               14″ - <i class="bi bi-currency-pound"></i>9.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -97,7 +98,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -124,7 +126,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -151,7 +154,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -178,7 +182,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -205,7 +210,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -234,7 +240,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -261,7 +268,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -290,7 +298,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -317,7 +326,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -346,7 +356,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -373,7 +384,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -402,7 +414,8 @@
               14″ - <i class="bi bi-currency-pound"></i>12.90
             </p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -424,7 +437,8 @@
           <section>
             <p class="card-price"><i class="bi bi-currency-pound"></i>20.00</p>
           </section>
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
