--- a/item-pages/Set meal.html
+++ b/item-pages/Set meal.html
@@ -61,7 +61,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>25.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -85,7 +86,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>51.00</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -110,7 +112,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>15.99</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
