--- a/item-pages/Doner Kebabs.html
+++ b/item-pages/Doner Kebabs.html
@@ -59,7 +59,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -79,7 +80,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -99,7 +101,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -119,7 +122,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>7.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -139,7 +143,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -159,7 +164,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -179,7 +185,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
