--- a/item-pages/European Dishes.html
+++ b/item-pages/European Dishes.html
@@ -57,7 +57,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -77,7 +78,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -97,7 +99,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -117,7 +120,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -137,7 +141,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -157,7 +162,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -177,7 +183,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -197,7 +204,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>15.00</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -217,7 +225,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.00</p>
                       </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
