--- a/item-pages/Vegetarian side Dishes.html
+++ b/item-pages/Vegetarian side Dishes.html
@@ -63,7 +63,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -83,7 +84,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -103,7 +105,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -123,7 +126,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -143,7 +147,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -163,7 +168,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -183,7 +189,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -203,7 +210,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -223,7 +231,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
@@ -243,7 +252,8 @@
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.50</p>
           </section>
 
-          <a class="card-button" href="tel:028 43758423">Order Now</a>
+          <a class="card-button" href="tel:+4428 4375 8423">Order Now</a>
+
         </div>
       </div>
       <!-- single card  end-->
