removed slider image no:10

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
       <div class="swiper-slide">
         <img src="./assets/images/slider_image/slider_image_9-min.jpeg" alt="" />
       </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/slider_image/slider_image_10-min.png" alt="" />
-      </div>
+      <!-- <div class="swiper-slide">
+        <img src="#slider image 10 should be here " alt="" />
+      </div> -->
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
